footer.php changes: move float clear below .site-info (which is flaoted left).... index.php changes: remove <p> tag around the_content().. Was creating format issue.... style.css changes: set .site-header as fixed, 100% width, centered, with 20% padding on both sides.. move rules to apply to .main instead of .mypage.. shift main content (.main) to the left.. margins 0 except margin-left 5%.. add padding to .main to leave enough space for header (they don't overlap).. set footer height 30px. add margins to vertical-align '.footer-nav ul li' and .site-info.. float .site-info left.. center <h1> headline text.. reduce <h2> <h3> margin-bottom (20px>15px).. add <p> margin-bottom (20px) except for last-of-type (0).. reduce '.header-nav ul li' margin-top (30px>24px).. add '.footer-nav ul li:first-of-type' margin-right (10px) to move fb + twitter links away from right page border.. darken link color (lightness 50%>20%).. remove nav <a> outline.. fixed links not changing colors! and use .current_page_item etc to highlight current page.. add shadows for depth.. remove box-shadow for .mypage (now applies to .main).. add .site-header gradient background (to right, white, to logo light blue).. add white background to .main content and .site-footer

--- a/style.css
+++ b/style.css
@@ -87,20 +87,31 @@ table {
 * give some headroom for logo and header menu
 */
 .mypage {
-	width: 70%;
-	max-width: 980px;
-
-	margin: 0 auto;
-
-	padding: 20px 20px 20px 20px;
 
 }
 
 /* header wrapper */
+
+.site-header {
+	position: fixed;
+	width: 100%;
+	left: 0;
+	padding: 10px 20% 20px 20%;
+}
+
+.main {
+	width: 70%;
+	max-width: 980px;
+	padding-top: 115px;
+	margin: 0 0 0 5%;
+}
+
+/*
 .site-header {
 	margin-bottom: 20px;
 	padding: 0 15px 0 15px;
 }
+*/
 
 /* content wrapper */
 .post {
@@ -108,9 +119,24 @@ table {
 	margin: 0 auto;
 }
 
-/* footer subtext wrapper */
-.site-info {
 
+/* Footer */
+
+.site-footer {
+	height: 30px;
+}
+
+
+.footer-nav ul li {
+	margin-top: 3px;
+}
+
+/* footer subtext wrapper */
+
+.site-info p {
+	display: inline;
+	float: left;
+	margin: 6px 0 0 80px;
 }
 
 #banner {
@@ -143,19 +169,20 @@ h1 {
 	font-size: 50px;
 	margin-bottom: 20px;
 	margin-left: 0px;
+	text-align: center;
 }
 
 h2 {
 	font-size: 32px;
 	font-weight: bold;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 	margin-left: 10px;
 }
 
 h3 {
 	font-size: 24px;
 	font-weight: bold;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 	margin-left: 10px;
 }
 
@@ -171,6 +198,11 @@ p {
 .post p {
 	max-width: 780px;
 	margin: 0 auto;
+	margin-bottom: 20px;
+}
+
+.post p:last-of-type {
+	margin-bottom: 0;
 }
 
 
@@ -220,35 +252,35 @@ a {
 
 /* add margin-top to header menu to align with corp. logo */
 .header-nav ul li {
-	margin-top: 30px;
+	margin-top: 24px;
 }
 
 .footer-nav {
 	font-size: 16px;
 }
 
+.footer-nav ul li:first-of-type {
+	margin-right: 10px;
+}
+
+
+
+/* Footer */
+
 .site-info p {
 	font-size: 12px;
-	float: left;
-	margin-bottom: 10px;
 }
 
 
 /* 2.2 Font Color */
 
-a:link, 
-a:visited {
-	color: hsla(0, 0%, 50%, 1);
-}
-
-a:hover, 
-a:focus, 
-a:active {
-	color: hsla(0, 0%, 0% 1);
-}
-
 p {
-	color: hsla(0,0%,20%, 1);
+	color: hsla(0, 0%, 20%, 1);
+}
+
+
+h1 {
+	color: hsla(0, 0%, 30%, 1);
 }
 
 h2,
@@ -258,19 +290,71 @@ h5 {
 	color: hsla(0, 0%, 20%, 1);
 }
 
-h1 {
-	color: hsla(0, 0%, 30%, 1);
+
+
+nav a {
+	outline: 0;
 }
 
+nav a:link, nav a:visited {
+	color: hsla(0, 0%, 40%, 1);
+}
 
-/* 1.1 Shadows/Depth */
+nav a:hover, 
+nav a:focus {
+	color: hsla(0, 0%, 0%, 1);
+}
+
+/* color menu item on click */
+nav a:active {
+	color: hsla(263, 100%, 35%, 1);
+}
+
+/* color current page menu item */
+nav .current_page_item > a,
+nav .current_page_ancestor > a,
+nav .current-menu-item > a,
+nav .current-menu-ancestor > a {
+	color: hsla(263, 100%, 35%, 1);
+}
+
+/* 3.0 Detail */
+
+/* 3.1 Shadows/Depth */
 
 /* Page */
 
-.mypage {
-	box-shadow: 15px 0 40px 1px gray;
+.main {
+	box-shadow: 10px 0 30px 1px gray;
 }
+
+.site-header {
+	box-shadow: 0 0 3px 1px gray;
+}
+
+/* 3.2 Background */
+
+.mypage {
+	background-image: url('resources/images/clouds-blur.jpg');
+}
+
+.site-header {
+	background: white;
+	background: -prefix-linear-gradient(right, white, hsla(196, 100%, 75%, 1));
+	background: linear-gradient(to right, white 40%, hsla(196, 100%, 75%, 1));
+	background: linear-gradient(to right, white 40%, hsla(196, 100%, 63%, 1));
+}
+
+.main {
+	background: white;
+}
+
+.site-footer {
+	background: white;
+}
+
 /* set z-indexes */
+
 
 /* set page as base */
 
